--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.1.7
 Pillow==9.5.0
 requests==2.28.2
 requests-oauthlib==1.3.1
+gunicorn==19.7.1
 sqlparse==0.4.3
 virtualenv==20.24.5
 psycopg2-binary==2.9.5
